Bug 1616829: Don't remove ATK_STATE_EDITABLE from list items in editors. r=MarcoZ

Differential Revision: https://phabricator.services.mozilla.com/D68327

--HG--
extra : moz-landing-system : lando